# cdse_grab

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01-Sentinel3FRP.ipynb
src/cdse_grab/: __init__.py  config.py  main.py
